# sleepkit

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json
.devcontainer/: devcontainer.json  install.sh  postCreateCommand.sh
.github/: ci.yaml  docs.yaml
.github/workflows/: ci.yaml  docs.yaml  pypi.yaml  release.yaml
api/datasets/: index.html
api/models/: index.html
api/sleepkit/: index.html
api/stage/: index.html
apnea/overview/: index.html
assets/: ablation-se-ratio.html  ablation-temporal.html  block-latency.html  demo-sleep-cycle-pie.html  detect-2-eff.json  detect-2-tst.html  detect-2-tst.json  metrics.html  sleep-cycle-pie.html  stage-3-eff.html  stage-4-eff.json  stage-4-tst.json  stage-5-eff.html  stage-5-eff.json
configs/: compute_fs001.json  compute_fs002.json  compute_fs003.json  compute_fs004.json  demo-stage-4.json  download.json  export-stage-2.json  export-stage-3.json  export-stage-4.json  export-stage-5.json  feat-stage-001.json  feature-stage-002.json  fs-w-a-5-30.json  fs-w-a-5-60.json  fs-w-p-40-10.json  fs-w-p-5-1.json  fs-w-pa-14-30.json  fs-w-pa-14-60.json  sa-2-tcn-lg.json  sa-2-tcn-sm.json  sa-2-unet-lg.json  sd-2-tcn-sm.json  ss-2-tcn-sm.json  ss-3-tcn-sm.json  ss-4-tcn-sm.json  ss-5-tcn-sm.json  test-apnea-2.json  test-stage-2.json  test-stage-3.json  test-stage-4.json  test-stage-5.json  train-apnea-2.json  train-sleep-detect.json  train-sleep-stage.json  train-stage-2-fs004.json  train-stage-2-ofsg.json  train-stage-2.json  train-stage-3-fs004.json  train-stage-3.json  train-stage-4-fs004.json  (+3 more)
configs/sleep-detect/: demo.json  export.json  features.json  test.json  train.json
configs/sleep-stage-2/: demo.json  export.json  test.json  train.json
configs/sleep-stage-3/: demo.json  export.json  test.json  train.json
configs/sleep-stage-4/: demo.json  export.json  test.json  train.json
configs/sleep-stage-5/: demo.json  export.json  features.json  test.json  train.json
datasets/: index.html
detect/methods/: index.html
detect/results/: index.html
docs/: architecture.md  datasets.md  demo.md  index.md  models.md  overview.md  quickstart.md  results.md  sleepstages.md
docs/api/: datasets.md  models.md  sleepkit.md  stage.md  tasks.md
docs/apnea/: overview.md
docs/assets/: ablation-dilation.html  ablation-kernelsize.html  ablation-width.html  block-latency.html  detect-2-eff.html  sleep-stage-demo-example.html  stage-2-eff.html  stage-2-eff.json  stage-2-tst.html  stage-2-tst.json  stage-3-eff.json  stage-3-tst.html  stage-3-tst.json  stage-4-eff.html  stage-4-tst.html  stage-5-tst.html  stage-5-tst.json
docs/assets/modes/: demo-params.md  download-params.md  evaluate-params.md  export-params.md  train-params.md
docs/assets/usage/: json-configuration.md  python-configuration.md  python-demo-snippet.md  python-download-snippet.md  python-evaluate-snippet.md  python-export-snippet.md  python-feature-snippet.md  python-full-snippet.md  (+1 more)
docs/css/: custom.css
docs/datasets/: byod.md  cmidss.md  index.md  mesa.md  stages.md  synthetic.md  ysyw.md
docs/detect/: demo.md  methods.md  overview.md  results.md
docs/experiments/: index.md  stage-ablation.md
docs/features/: byofs.md  featset01.md  featset02.md  featset03.md  fs_c_ear_9.md  fs_h_e_10.md  fs_w_a_5.md  fs_w_p_5.md  fs_w_pa_14.md  index.md
docs/guides/: index.md  stage-ablation.md  train-detect-model.ipynb  train-detect-model.md
docs/models/: byom.md  efficientnet.md  index.md  mobileone.md  tcn.md  unet.md
docs/modes/: configuration.md  demo.md  download.md  evaluate.md  export.md  feature.md  index.md  train.md
docs/stages/: architecture.md  background.md  demo.md  experiments.md  methods.md  overview.md  results.md
docs/tasks/: apnea.md  arousal.md  byot.md  detect.md  index.md  stage.md
docs/usage/: cli.md  python.md
docs/zoo/: apnea.md  detect.md  index.md  stage.md
evb/: Makefile  README.md  autogen.mk
evb/src/: constants.h  main.cc  main.h  model.h  model_buffer.h  physiokit.cc  physiokit.h  sensor.cc  sensor.h  sleepkit.cc  sleepkit.h  stimulus.h
models/: index.html
neuralspot/tflite/: metrics.py
notebooks/: demo.ipynb  experiment-001.ipynb  results.ipynb  sleep-stage-demo.ipynb  stage-demo.ipynb  train-detect-model.ipynb
overview/: index.html
results/: index.html
scripts/: gen_ref_pages.py  profile.py  test_tflm.py  upload_to_model_zoo.py
search/: search_index.json
sleepkit/: __init__.py  __main__.py  apnea.py  augmentations.py  cli.py  defines.py  features.py  metrics.py  preprocess.py  sleepdetect.py  sleepstage.py  utils.py
sleepkit/apnea/: __init__.py  defines.py  demo.py  evaluate.py  export.py  metrics.py  train.py  utils.py
sleepkit/backends/: __init__.py  backend.py  evb.py  pc.py  utils.py
sleepkit/datasets/: __init__.py  augmentation.py  cmidss.py  dataset.py  defines.py  download.py  factory.py  hdf5.py  mesa.py  nsrr.py  ofsg.py  stages.py  utils.py  ysyw.py
sleepkit/features/: __init__.py  defines.py  factory.py  featset01.py  featset02.py  featset03.py  featset04.py  featset05.py  featset06.py  featureset.py  fs_c_ear_9.py  fs_h_e_10.py  fs_w_a_5.py  fs_w_p_40.py  fs_w_p_5.py  fs_w_pa_14.py  generate.py  h5dataloader.py  store.py
sleepkit/models/: __init__.py  blocks.py  efficientnet.py  factory.py  mobileone.py  multiresnet.py  resnet.py  tcn.py  tflstm.py  unet.py  unext.py  utils.py
sleepkit/rpc/: __init__.py  backends.py  utils.py
sleepkit/stage/: defines.py  demo.py  evaluate.py  export.py  train.py  utils.py
sleepkit/tasks/: __init__.py  factory.py  task.py
sleepkit/tflite/: __init__.py  convert.py  metrics.py  model.py
sleepkit/utils/: __init__.py  plotting.py
stages/architecture/: index.html
stages/demo/: index.html
stages/experiments/: index.html
stages/methods/: index.html
stages/overview/: index.html
stages/results/: index.html
tests/: app_test.py  test_apnea_metrics.py  test_serial_utils.py  test_stage_metrics.py  test_taskparams_paths.py
(+78 files in other folders)
