[tool.poetry]
name = "sleepkit"
version = "0.1.0"
description = "AI driven sleep monitoring kit for ultra low-power wearables."
license = "BSD-3-Clause"
authors = ["Ambiq AI <support.aitg@ambiq.com>"]
readme = "README.md"
homepage = "https://ambiq.ai"
packages = [
    { include = "sleepkit" }
]

[tool.poetry.scripts]
sleepkit = "sleepkit.cli:run"

[tool.taskipy.tasks]
format = "isort --profile black sleepkit && black --line-length 120 sleepkit"
lint = "pylint sleepkit"
test = "pytest tests/"
clean = "make -C ./evb clean"
build = "make -C ./evb"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow-macos = {version = "^2.14.0", platform = "darwin"}
tensorflow = {version = "^2.14.0", markers = "sys_platform != 'darwin'"}
tensorflow-metal = {version = "^1.1.0", platform = "darwin"}
numpy = "^1.24.3"
scikit-learn = "^1.3.0"
scipy = "^1.11.1"
h5py = "^3.9.0"
rich = "^13.4.2"
tqdm = "^4.65.0"
boto3 = "^1.27.1"
neurokit2 = "^0.2.4"
joulescope = "^1.1.7"
pydantic = "^1.10.2"
pydantic-argparse = "^0.5.0"
physiokit = "^0.5.0"
pyedflib = "^0.1.34"
plotly = "^5.16.1"
wandb = "^0.15.8"
seaborn = "^0.12.2"
matplotlib = "3.7.3"
fastparquet = "^2023.8.0"
statsmodels = "^0.14.0"
erpc = {git = "https://github.com/AmbiqAI/erpc.git", rev = "develop", subdirectory = "erpc_python"}
pyserial = "^3.5"
tensorflow-model-optimization = "^0.7.5"


[tool.poetry.group.ci.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
taskipy = "^1.10.4"
pre-commit = "^3.3.1"
isort = "^5.12.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.6"
mkdocstrings-python = "^1.7.3"
markdown-include = "^0.8.1"
mkdocs-exclude = "^1.0.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"
wfdb = "^4.1.1"
jupyterlab = "^4.0.0"
tensorboard-plugin-profile = "^2.14.0"
pylint = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'

[tool.black]
line-length = 120


[tool.pylint.master]
ignore-paths = [
    "sleepkit/demo/rpc/GenericDataOperations_EvbToPc",
    "sleepkit/demo/rpc/GenericDataOperations_PcToEvb"
]
extension-pkg-whitelist = "pydantic"

[tool.pylint.message_control]
disable = [
    "unused-argument",
    "missing-module-docstring",
    "too-few-public-methods",
    "invalid-name",
    "logging-fstring-interpolation",
    "duplicate-code",
    "use-dict-literal",
    "unnecessary-lambda-assignment",
    "cell-var-from-loop"
]

[tool.pylint.format]
max-line-length = 140

[tool.pylint.design]
max-args = 50
max-locals = 50
max-statements = 80
max-module-lines = 2000
max-attributes = 10
max-branches = 50

[tool.pyright]

reportShadowedImports = "none"
