[tool.poetry]
name = "sleepkit"
version = "0.3.0"
description = "AI driven sleep monitoring kit for ultra low-power wearables."
license = "BSD-3-Clause"
authors = ["Ambiq AI <support.aitg@ambiq.com>"]
readme = "README.md"
homepage = "https://ambiq.ai"
packages = [
    { include = "sleepkit" }
]

[tool.poetry.scripts]
sleepkit = "sleepkit.cli:run"

[tool.taskipy.tasks]
format = "isort --profile black sleepkit && black --line-length 120 sleepkit"
lint = "pylint sleepkit"
test = "pytest tests/"
clean = "make -C ./evb clean"
build = "make -C ./evb"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow-macos = {version = "^2.15.0", platform = "darwin"}
tensorflow = {version = "^2.15.0", markers = "sys_platform != 'darwin'"}
tensorflow-metal = {version = "^1.1.0", platform = "darwin"}
numpy = "^1.26.4"
scikit-learn = "^1.4.0"
scipy = "^1.12.0"
h5py = "^3.10.0"
rich = "^13.7.0"
tqdm = "^4.66.1"
boto3 = "^1.34.36"
pydantic = "^2.5.3"
pydantic2-argparse = "^0.9.2"
physiokit = "^0.8.1"
pyedflib = "^0.1.36"
plotly = "^5.18.0"
wandb = "^0.16.3"
seaborn = "^0.13.2"
matplotlib = "3.8.2"
fastparquet = "^2023.10.1"
statsmodels = "^0.14.1"
pyserial = "^3.5"
tensorflow-model-optimization = "^0.7.5"
argdantic = {extras = ["all"], version = "^1.0.0"}
kaggle = "^1.6.6"


[tool.poetry.group.ci.dependencies]
black = "^24.1.1"
pytest = "^8.0.0"
taskipy = "^1.12.2"
pre-commit = "^3.6.0"
isort = "^5.13.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.8"
mkdocstrings-python = "^1.8.0"
markdown-include = "^0.8.1"
mkdocs-exclude = "^1.0.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"
wfdb = "^4.1.1"
jupyterlab = "^4.0.0"
tensorboard-plugin-profile = "^2.14.0"
pylint = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'

[tool.black]
line-length = 120


[tool.pylint.master]
ignore-paths = [
    "sleepkit/rpc/GenericDataOperations_EvbToPc",
    "sleepkit/rpc/GenericDataOperations_PcToEvb"
]
extension-pkg-whitelist = "pydantic"

[tool.pylint.TYPECHECK]
ignored-classes = [
   "h5py.Group"
]

[tool.pylint.message_control]
disable = [
    "unused-argument",
    "missing-module-docstring",
    "too-few-public-methods",
    "invalid-name",
    "logging-fstring-interpolation",
    "duplicate-code",
    "use-dict-literal",
    "unnecessary-lambda-assignment",
    "cell-var-from-loop",
    "cyclic-import"
]

[tool.pylint.format]
max-line-length = 140

[tool.pylint.design]
max-args = 50
max-locals = 50
max-statements = 100
max-module-lines = 2000
max-attributes = 25
max-branches = 50

[tool.pyright]

reportShadowedImports = "none"
