[tool.poetry]
name = "sleepkit"
version = "0.8.0"
description = "AI driven sleep monitoring kit for ultra low-power wearables."
license = "BSD-3-Clause"
authors = ["Ambiq AI <support.aitg@ambiq.com>"]
readme = "README.md"
homepage = "https://ambiqai.github.io/sleepkit"
repository = "https://github.com/AmbiqAI/sleepkit"
packages = [
    { include = "sleepkit" }
]

[tool.poetry.scripts]
sleepkit = "sleepkit.cli:main"

[tool.taskipy.tasks]
format = "ruff format"
lint = "ruff check"
test = "pytest tests/"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow = {version = "^2.17.0"}
tensorflow-metal = {version = "^1.1.0", markers = "sys_platform == 'darwin'"}
numpy = "^1.26.4"
scikit-learn = "^1.4.0"
scipy = "^1.12.0"
h5py = "^3.10.0"
rich = "^13.7.0"
tqdm = "^4.66.1"
boto3 = "^1.34.36"
pydantic = "^2.5.3"
physiokit = "^0.8.1"
pyedflib = "^0.1.36"
plotly = "^5.18.0"
wandb = "^0.16.3"
seaborn = "^0.13.2"
matplotlib = "^3.8.2"
fastparquet = "^2023.10.1"
statsmodels = "^0.14.1"
pyserial = "^3.5"
argdantic = {extras = ["all"], version = "^1.0.0"}
kaggle = "^1.6.6"
neuralspot-edge = "~0.2.1"


[tool.poetry.group.ci.dependencies]
pytest = "^8.0.0"
taskipy = "^1.12.2"
pre-commit = "^3.6.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.8"
mkdocstrings-python = "^1.8.0"
markdown-include = "^0.8.1"
mkdocs-exclude = "^1.0.2"
mkdocs-gen-files = "^0.5.0"
mkdocs-section-index = "^0.3.9"
mkdocs-literate-nav = "^0.6.1"
mkdocs-jupyter = "^0.24.8"
black = "^24.8.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"
wfdb = "^4.1.1"
jupyterlab = "^4.0.0"
notebook = "^7.0.2"
tensorboard-plugin-profile = "^2.14.0"
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-exclude = [
    "sleepkit/backends/GenericDataOperations_EvbToPc",
    "sleepkit/backends/GenericDataOperations_PcToEvb",
    "sleepkit/backends/erpc"
]

[tool.ruff.lint]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pyright]
reportShadowedImports = "none"
